--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
                 </div>
                 <div class="col-sm-7 col-lg-8">
                     <div class="videoPlayer" id="videoPlayer">
-                        <video controls class="mainVideo" id="mainVideo" src=""></video>
+                        <video controls class="mainVideo" id="mainVideo" src="" autoplay></video>
+                        <div class="dialog">
+                            <div class="dialogBox">
+                                <h3> هل تريد تشغيل الفيديو التالى ؟ </h3>
+                                <div class="dialogBtns">
+                                    <button type="button" class="dialogBtn confirm" data-action="confirm"> تاكيد </button>
+                                    <button type="button" class="dialogBtn cancel" data-action="cancel"> إلغاء </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-5 col-lg-4">
